...
                                </view>
                                <view key="tableFooterView" contentMode="scaleToFill" id="WXq-Kj-1H1">
                                    <rect key="frame" x="0.0" y="353" width="375" height="153"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <subviews>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NvH-jp-j9x" customClass="TealButton">
                                            <state key="normal" title="Sign In">
                                                <color key="titleColor" name="highlightColor" catalog="System" colorSpace="catalog"/>
                                            </state>
                                            <connections>
                                                <action selector="signIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="X16-nJ-hCz"/>
                                            </connections>
                                        </button>
...
